# edit

./: .gitignore  .gitmodules  CMakeLists.txt
Benchmark/: CMakeLists.txt
Core/: CMakeLists.txt
Core/include/core/: font.hpp  ft.hpp  hb.hpp  image.hpp  log.hpp  misc.hpp
Core/src/core/: ft.cpp  hb.cpp
Editor/: CMakeLists.txt
Editor/src/: main.cpp
Test/: CMakeLists.txt
cmake/: settings.cmake
